@@ -33,6 +33,8 @@
 #include "netif/xaxiemacif.h"
 #include "lwipopts.h"
 
+extern enum ethernet_link_status eth_link_status;
+
 XAxiEthernet_Config *xaxiemac_lookup_config(unsigned mac_base)
 {
 	extern XAxiEthernet_Config XAxiEthernet_ConfigTable[];
@@ -74,8 +76,13 @@ void init_axiemac(xaxiemacif_s *xaxiemac, struct netif *netif)
 
 	/* set mac address */
 	XAxiEthernet_SetMacAddress(xaxiemacp, (unsigned char*)(netif->hwaddr));
-	link_speed = Phy_Setup(xaxiemacp);
+	link_speed = phy_setup_axiemac(xaxiemacp);
 	XAxiEthernet_SetOperatingSpeed(xaxiemacp, link_speed);
+
+	if (link_speed == 0)
+		eth_link_status = ETH_LINK_DOWN;
+	else
+		eth_link_status = ETH_LINK_UP;
 
 	/* Setting the operating speed of the MAC needs a delay. */
 	{
