@@ -1,5 +1,7 @@
 Change Log for lwip
 =================================
+2018-03-05
+	* Add Hot plug detect support for EmacPS and AXI Ethernet
 2018-03-14
 	* Avoid axi ethernet config intialize in two places.
 2018-01-19
